codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thread_snapshot_replay_agent_inbox_dedupes_compatibility_items.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Agent message: Please review the latest diff from 019cbff7-558b-77d3-8653-8238ab5361ec
